[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Antonio A. Medellín", email = "amedellinm@outlook.com" }]
name = "aamm"
version = "0.10.0"

[tool.hatch.build]
exclude = ["**/__*/**"]

[tool.hatch.build.targets.sdist]
# Ignore .gitignore when excluding/including files
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["aamm"]
